--- a/backroad/index.html
+++ b/backroad/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/main.css"/>
+    <link rel="stylesheet" href="./css/main.css"/>
 
     <link
       rel="shortcut icon"
-      href="../image/favicon-test1/favicon.ico"
+      href="./image/favicon-test1/favicon.ico"
       type="image/x-icon"
     />
     <link
       rel="stylesheet"
-      href="../style/fontawesome-free-6.3.0-web/fontawesome-free-6.3.0-web/css/all.css"
+      href="./style/fontawesome-free-6.3.0-web/fontawesome-free-6.3.0-web/css/all.css"
     />
     <title>Flex box Project</title>
   </head>
@@ -25,7 +25,7 @@
         <div class="nav-center">
           <!-- nav-header -->
           <div class="nav-header">
-            <img src="../image/favicon-test/favicon-32x32.png" class="nav-logo" alt=""/>
+            <img src="./image/favicon-test/favicon-32x32.png" class="nav-logo" alt=""/>
             <button type="button" class="nav-toggle" id="nav-toggle">
               <i class="fas fa-bars-staggered"></i>
             </button>
@@ -105,7 +105,7 @@
         <!-- about img -->
         <div class="about-img">
           <img
-            src="../image/img-3.jpg"
+            src="./image/img-3.jpg"
             class="about-photo"
             alt="fantasy canal"
           />
@@ -191,7 +191,7 @@
         <!-- single service -->
         <article class="tour-cards">
           <div class="tour-img-container">
-            <img src="../image/img-7.jpg" class="tour-img" alt="" />
+            <img src="./image/img-7.jpg" class="tour-img" alt="" />
             <p class="tour-date">june 14th, 2022</p>
           </div>
           <!-- tour info -->
@@ -217,7 +217,7 @@
         <!-- single service -->
         <article class="tour-cards">
           <div class="tour-img-container">
-            <img src="../image/img-8.jpg" class="tour-img" alt="" />
+            <img src="./image/img-8.jpg" class="tour-img" alt="" />
             <p class="tour-date">march 30th, 2023</p>
           </div>
           <!-- tour info -->
@@ -242,7 +242,7 @@
         <!-- single service -->
         <article class="tour-cards">
           <div class="tour-img-container">
-            <img src="../image/img-5.jpg" class="tour-img" alt="" />
+            <img src="./image/img-5.jpg" class="tour-img" alt="" />
             <p class="tour-date">febuary 14th, 2022</p>
           </div>
           <!-- tour info -->
@@ -268,7 +268,7 @@
         <!-- single service -->
         <article class="tour-cards">
           <div class="tour-img-container">
-            <img src="../image/img-6.jpg" class="tour-img" alt="" />
+            <img src="./image/img-6.jpg" class="tour-img" alt="" />
             <p class="tour-date">december 14th, 2022</p>
           </div>
           <!-- tour info -->
@@ -319,56 +319,56 @@
       <div class="center-gallary">
         <!-- sigle item -->
         <article class="gallary-container-img">
-          <img src="../image/img-1.jpg" class="gallary-img"/>
+          <img src="./image/img-1.jpg" class="gallary-img"/>
           <a href="#" class="gallary-icon">
             <i class="fas fa-search"></i>
           </a>
         </article>
         <!-- sigle item -->
         <article class="gallary-container-img">
-          <img src="../image/img-2.jpg" class="gallary-img"/>
+          <img src="./image/img-2.jpg" class="gallary-img"/>
           <a href="#" class="gallary-icon">
             <i class="fas fa-search"></i>
           </a>
         </article>
         <!-- sigle item -->
         <article class="gallary-container-img">
-          <img src="../image/img-3.jpg" class="gallary-img"/>
+          <img src="./image/img-3.jpg" class="gallary-img"/>
           <a href="#" class="gallary-icon">
             <i class="fas fa-search"></i>
           </a>
         </article>
         <!-- sigle item -->
         <article class="gallary-container-img">
-          <img src="../image/img-4.jpg" class="gallary-img"/>
+          <img src="./image/img-4.jpg" class="gallary-img"/>
           <a href="#" class="gallary-icon">
             <i class="fas fa-search"></i>
           </a>
         </article>
         <!-- sigle item -->
         <article class="gallary-container-img">
-          <img src="../image/img-5.jpg" class="gallary-img"/>
+          <img src="./image/img-5.jpg" class="gallary-img"/>
           <a href="#" class="gallary-icon">
             <i class="fas fa-search"></i>
           </a>
         </article>
         <!-- sigle item -->
         <article class="gallary-container-img">
-          <img src="../image/img-6.jpg" class="gallary-img"/>
+          <img src="./image/img-6.jpg" class="gallary-img"/>
           <a href="#" class="gallary-icon">
             <i class="fas fa-search"></i>
           </a>
         </article>
         <!-- sigle item -->
         <article class="gallary-container-img">
-          <img src="../image/img-7.jpg" class="gallary-img"/>
+          <img src="./image/img-7.jpg" class="gallary-img"/>
           <a href="#" class="gallary-icon">
             <i class="fas fa-search"></i>
           </a> 
         </article>
         <!-- sigle item -->
         <article class="gallary-container-img">
-          <img src="../image/img-8.jpg" class="gallary-img"/>
+          <img src="./image/img-8.jpg" class="gallary-img"/>
           <a href="#" class="gallary-icon">
             <i class="fas fa-search"></i>
           </a>
